Set `overflow: hidden` on `html` to prevent scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
 
 html {
   font-size: 16px;
+  overflow: hidden;
 }
 
 body {
